tests/static_errors/unknown_function.ca

nonexistant_function()

type RealType {}

RealValue = create(RealType)

RealValue.nonexistantMethod()
